<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu_better"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_drawable"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_10"
            android:fontFamily="cursive"
            android:text="@string/titel"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <ImageView
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/div_size"
            android:layout_marginBottom="@dimen/margin_10"
            android:src="@drawable/divider_white"></ImageView>


        <TextView
            android:id="@+id/starters_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/starters"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"></TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_height_scaling"
            android:src="@drawable/starter_2_new"></ImageView>


        <TextView
            android:id="@+id/main_course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/starters_title"
            android:fontFamily="cursive"
            android:text="@string/main_course"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"></TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_height_scaling"
            android:src="@drawable/main_course_1"></ImageView>


        <TextView
            android:id="@+id/dessert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/dessert"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"></TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_height_scaling"
            android:src="@drawable/dessert"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:fontFamily="cursive"
            android:text="@string/contacts_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/contact_size_big"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_symbol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_phone_24"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/contacts_phone"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/contact_size_small"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mail_symbol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_email_24"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/contacts_mail"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/contact_size_small"></TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>