<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Desserts"
    android:background="@drawable/background_menu_better">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_drawable">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/category_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/dessert"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"></TextView>

            <ImageButton
                android:id="@+id/return_button"
                android:layout_width="@dimen/return_button_dimens"
                android:layout_height="@dimen/return_button_dimens"
                android:layout_margin="@dimen/margin_10"
                android:layout_alignParentTop= "true"
                android:background="@color/transparent"
                android:src="@drawable/ic_baseline_chevron_left_24"></ImageButton>

            <ImageView
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/div_size"
                android:layout_below="@+id/category_title"
                android:layout_marginBottom="@dimen/margin"
                android:src="@drawable/divider_white"></ImageView>

            <ImageView
                android:id="@+id/dessert_main_img"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_below="@id/divider_1"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/margin_20"
                android:src="@drawable/dessert"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dessert_main_img"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/first_dessert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dessert_main_img"
                    android:layout_marginTop="@dimen/margin_20"
                    android:fontFamily="cursive"
                    android:text="@string/first_dessert"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size" />

                <TextView
                    android:id="@+id/first_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/first_dessert"
                    android:layout_marginBottom="@dimen/margin"
                    android:fontFamily="cursive"
                    android:text="@string/first_dessert_description"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/description_size"></TextView>


                <TextView
                    android:id="@+id/second_dessert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/first_description"
                    android:layout_marginTop="@dimen/margin_20"
                    android:fontFamily="cursive"
                    android:text="@string/second_dessert"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size" />

                <TextView
                    android:id="@+id/second_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/second_dessert"
                    android:layout_marginBottom="@dimen/margin"
                    android:fontFamily="cursive"
                    android:text="@string/second_dessert_description"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/description_size"></TextView>

                <TextView
                    android:id="@+id/third_dessert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/second_description"
                    android:layout_marginTop="@dimen/margin_20"
                    android:fontFamily="cursive"
                    android:layout="@+id/starters_title"
                    android:text="@string/third_dessert"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size" />

                <TextView
                    android:id="@+id/third_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/third_dessert"
                    android:layout_marginBottom="@dimen/margin"
                    android:fontFamily="cursive"
                    android:text="@string/third_dessert_description"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/description_size"></TextView>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>